# osagyefo_esq

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  current_texts.txt  main.py  pyproject.toml  requirements.txt
chroma/662fb795-e1e6-4ccc-ad02-eaab355d9836/: index_metadata.pickle
chroma/9ae25ccf-6e20-4824-a78e-ddd8efc67a7b/: index_metadata.pickle
notebooks/: pre_rag.ipynb  rag_pipeline.ipynb
prompts/: main_prompt_template.txt  rephaser_llm_template.txt
src/: list_docs.py
src/app/: a_sub_model.py  b_primary_model.py  load_embeddings.py  load_models.py
tests/: download_model.py  retriever_check.py
